# repo-rag-debugger

./: .env.local.example  .gitattributes  .gitignore  .vercelignore  LICENSE  README.md  index.html  next.config.mjs  package.json  pyproject.toml  styles.css  tailwind.config.ts  vercel.json  vitest.config.ts
.github/workflows/: python-ci.yml
api/: _telemetry_static.json  stats.py
docs/: architecture.md  roadmap.md
frontend/: README.md  next.config.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: Breadcrumbs.tsx  ThemeToggle.tsx  UserMenu.tsx
frontend/src/components/ui/: badge.test.tsx  badge.tsx  code-block.tsx
frontend/src/lib/: api.ts
scripts/: compute_telemetry_static.py
src/app/: error.tsx  loading.tsx  not-found.tsx
src/app/capabilities/: page.tsx
src/app/roadmap/: page.tsx
src/app/settings/: page.tsx
src/app/telemetry/: page.tsx
src/components/dashboard/: StatCard.test.tsx  StatCard.tsx
src/components/layout/: CommandPalette.tsx  Sidebar.tsx  TopBar.tsx
src/components/providers/: theme-provider.tsx  toaster.tsx
src/components/ui/: avatar.tsx  button.test.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  input.tsx  kbd.tsx  popover.tsx  scroll-area.tsx  select.tsx  skeleton.tsx  sparkline.test.tsx  sparkline.tsx  status-dot.tsx  tabs.tsx  tooltip.tsx
src/lib/: hooks.test.ts  hooks.ts  project.ts  utils.test.ts  utils.ts
src/repo_rag_debugger/: __init__.py  catalog.py  cli.py  models.py  project.json
src/test/: setup.ts
tests/: test_cli.py  test_stats.py
