[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-rag-debugger"
version = "0.1.0"
description = "A source-aware debugging assistant that indexes codebases, stack traces, and docs to propose grounded fixes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ignazio De Santis" }
]
dependencies = []

[project.scripts]
repo-rag-debugger = "repo_rag_debugger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
# Scope discovery to the Python package only — the Next.js dashboard
# also lives under src/ and we don't want setuptools treating those
# directories as Python modules.
include = ["repo_rag_debugger*"]

[tool.setuptools.package-data]
repo_rag_debugger = ["project.json"]
